tests/NormalTests/paczka1/fuzzy1/36091240.err
Error in line 3: Zq9SlkBMMH A213 -1,6
Error in line 4: yShZ S661 57,5
Error in line 8: yShZ A224 44,3
Error in line 2: Zq9SlkBMMH A213 39,5
Error in line 7: 4MTZVZ S661 20,9
Error in line 19: 1ZJJ5V6E64 A213 98,1
Error in line 26: 4MTZVZ A213 59,4
Error in line 34: Zq9SlkBMMH A224 23,8
Error in line 37: xDvSq4GyEH A224 67,2
